<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/firstLayout"
        android:layout_width="match_parent"
        android:layout_height="434dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/hint"
            android:inputType="number"
            android:maxLength="4"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/secondLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonSeven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/seven"
                android:textSize="40sp"
                android:onClick="seven"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonEight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eight"
                android:textSize="40sp"
                android:onClick="eight"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonNine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nine"
                android:textSize="40sp"
                android:onClick="nine"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/thirdLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/four"
                android:textSize="40sp"
                android:onClick="four"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/five"
                android:textSize="40sp"
                android:onClick="five"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonSix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/six"
                android:textSize="40sp"
                android:onClick="six"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fourthLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/one"
                android:textSize="40sp"
                android:onClick="one"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/two"
                android:textSize="40sp"
                android:onClick="two"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/three"
                android:textSize="40sp"
                android:onClick="three"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fifthLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonZero"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textSize="40sp"
                android:onClick="zero"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonBack"
                android:layout_width="147dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/back"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:onClick="back"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonOpen"
                android:layout_width="147dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/open"
                android:textColor="@color/black"

                android:textSize="20sp"

                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>